Change groupId from org.springframework.data to com.falkordb (#14)
This enables publishing to Maven Central under the FalkorDB namespace,
which we have permissions for. The org.springframework.data namespace
requires Spring project authorization.

--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 		<version>4.0.0-RC1</version>
 	</parent>
 
-	<groupId>org.springframework.data</groupId>
+	<groupId>com.falkordb</groupId>
 	<artifactId>spring-data-falkordb</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 
