Fix: Upgrade to Spring Data Commons 3.5.3 to resolve @Query annotation bug
Fixes critical bug where repositories with @Query methods failed to instantiate. Upgraded to Spring Data Commons 3.5.3 (latest stable).

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,6 +72,6 @@ jobs:
         uses: dorny/test-reporter@v1
         with:
           name: Maven Tests
-          path: '**/target/surefire-reports/*.xml,**/target/failsafe-reports/*.xml'
+          path: '**/target/surefire-reports/*.xml'
           reporter: java-junit
           fail-on-error: true
