--- a/ci/pipeline.properties
+++ b/ci/pipeline.properties
@@ -1,19 +1,3 @@
-#
-# Copyright 2011-2025 the original author or authors.
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#      https://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-#
-
 # Java versions
 java.main.tag=25-jdk-noble
 java.next.tag=25-jdk-noble
@@ -30,11 +14,12 @@ docker.mongodb.8.0.version=8.0.9
 # Supported versions of Redis
 docker.redis.6.version=6.2.13
 docker.redis.7.version=7.2.4
+docker.redis.8.version=8.2.2
 docker.valkey.8.version=8.1.1
 
 # Docker environment settings
-docker.java.inside.basic=-v $HOME:/tmp/jenkins-home
-docker.java.inside.docker=-u root -v /var/run/docker.sock:/var/run/docker.sock -v /usr/bin/docker:/usr/bin/docker -v $HOME:/tmp/jenkins-home
+docker.java.inside.basic=-v $HOME:/tmp/jenkins-home --ulimit nofile=32000:32000
+docker.java.inside.docker=-u root -v /var/run/docker.sock:/var/run/docker.sock -v /usr/bin/docker:/usr/bin/docker -v $HOME:/tmp/jenkins-home --ulimit nofile=32000:32000
 
 # Credentials
 docker.registry=
