Exclude CI config files managed by release tooling from license check.
Closes #3063

--- a/pom.xml
+++ b/pom.xml
@@ -490,6 +490,9 @@
 									<include>**</include>
 								</includes>
 								<excludes>
+									<exclude>**/ci/**</exclude>
+									<exclude>**/.mvn/**</exclude>
+									<exclude>**/.github/**</exclude>
 									<exclude>**/*.adoc</exclude>
 									<exclude>**/*.cypher</exclude>
 									<exclude>**/.flattened-pom.xml</exclude>
