--- a/spring-boot-starter-data-falkordb/pom.xml
+++ b/spring-boot-starter-data-falkordb/pom.xml
@@ -66,6 +66,13 @@
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
 
+        <!-- Optional: validation annotations used by configuration properties -->
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <optional>true</optional>
+        </dependency>
+
         <!-- Spring Data FalkorDB -->
         <dependency>
             <groupId>com.falkordb</groupId>
@@ -84,6 +91,24 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+        <!-- Spring Security Core for RBAC integration -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+        </dependency>
+
+        <!-- Optional: only needed if using FalkorDBSecurityContextFilter (servlet integration) -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
             <optional>true</optional>
         </dependency>
 
