--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 	<parent>
 		<groupId>org.springframework.data.build</groupId>
 		<artifactId>spring-data-parent</artifactId>
-		<version>4.1.0-SNAPSHOT</version>
+		<version>4.1.0-M1</version>
 	</parent>
 
 	<groupId>org.springframework.data</groupId>
@@ -111,7 +111,7 @@
 		<skipUnitTests>${skipTests}</skipUnitTests>
 		<sortpom-maven-plugin.version>4.0.0</sortpom-maven-plugin.version>
 		<spring-javaformat.version>0.0.46</spring-javaformat.version>
-		<springdata.commons>4.1.0-SNAPSHOT</springdata.commons>
+		<springdata.commons>4.1.0-M1</springdata.commons>
 	</properties>
 
 	<dependencyManagement>
@@ -437,20 +437,8 @@
 	<!-- The Spring Data Commons tooling removes this (ok), but adds it back unsorted, so we just ignore this part completely. -->
 	<?SORTPOM IGNORE?>
 	<repositories>
-		<repository>
-			<id>spring-snapshot</id>
-			<url>https://repo.spring.io/snapshot</url>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-		</repository>
-		<repository>
-			<id>spring-milestone</id>
-			<url>https://repo.spring.io/milestone</url>
-		</repository>
+		
+		
 	</repositories>
 	<?SORTPOM RESUME?>
 
