--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,9 @@
 name: CI Build
 
 on:
+  workflow_dispatch:
   push:
-    branches: [ main, 7.0.x, 6.5.x, 'issue/**' ]
+    branches: [ main, 8.0.x, 7.5.x, 'issue/**' ]
 
 permissions: read-all
 
@@ -16,11 +17,11 @@ jobs:
     steps:
       - uses: actions/checkout@v6
       - name: Setup Java and Maven
-        uses: spring-projects/spring-data-release/actions/setup-maven@main
+        uses: spring-projects/spring-data-build/actions/setup-maven@4.0.x
         with:
           java-version: ${{ matrix.java-version }}
           develocity-access-key: '${{ secrets.DEVELOCITY_ACCESS_KEY }}'
       - name: Build
-        uses: spring-projects/spring-data-release/actions/maven-build@main
+        uses: spring-projects/spring-data-build/actions/maven-build@4.0.x
         env:
           TESTCONTAINERS_REUSE_ENABLE: true
