--- a/.github/workflows/snapshots.yml
+++ b/.github/workflows/snapshots.yml
@@ -1,8 +1,9 @@
 name: Snapshots
 
 on:
+  workflow_dispatch:
   push:
-    branches: [ main, 7.0.x, 6.5.x, 'issue/**' ]
+    branches: [ main, 8.0.x, 7.5.x, 'issue/**' ]
 
 permissions: read-all
 
@@ -14,11 +15,11 @@ jobs:
     steps:
       - uses: actions/checkout@v6
       - name: Setup Java and Maven
-        uses: spring-projects/spring-data-release/actions/setup-maven@main
+        uses: spring-projects/spring-data-build/actions/setup-maven@3.5.x
         with:
           develocity-access-key: '${{ secrets.DEVELOCITY_ACCESS_KEY }}'
       - name: Deploy to Artifactory
-        uses: spring-projects/spring-data-release/actions/maven-artifactory-deploy@main
+        uses: spring-projects/spring-data-build/actions/maven-artifactory-deploy@3.5.x
         env:
           TESTCONTAINERS_REUSE_ENABLE: true
         with:
