Update GitHub action branch triggers.
See #3079

--- a/.github/workflows/snapshots.yml
+++ b/.github/workflows/snapshots.yml
@@ -3,7 +3,7 @@ name: Snapshots
 on:
   workflow_dispatch:
   push:
-    branches: [ main, 8.0.x, 7.5.x, 'issue/**' ]
+    branches: [ 8.0.x, 'issue/8.0.x/**' ]
 
 permissions: read-all
 
